# idxworkspace-rust-svelte

./: LICENSE  README.md  idx-template.json  idx-template.nix
.idx/: dev.nix
neuralui/: README.md  package.json
neuralui/src/: .gitkeep
spine/: Cargo.toml  README.md
spine/crates/: README.md
spine/crates/spine-agent-sdk/: Cargo.toml
spine/crates/spine-context/: Cargo.toml
spine/crates/spine-core/: Cargo.toml
spine/crates/spine-data/: Cargo.toml
spine/crates/spine-extensions/: Cargo.toml
spine/crates/spine-llm-router/: Cargo.toml
spine/crates/spine-mcp/: Cargo.toml
spine/crates/spine-mcp-macros/: Cargo.toml
spine/crates/spine-resources/: Cargo.toml
spine/crates/spine-router/: Cargo.toml
spine/crates/spine-runtime/: Cargo.toml
spine/crates/spine-security/: Cargo.toml
spine/crates/spine-services/: Cargo.toml
spine/crates/spine-wasm/: Cargo.toml
spine/docs/rust-sdk-main/: Cargo.toml  LICENSE  README.md
spine/docs/rust-sdk-main/crates/mcp-client/: Cargo.toml  README.md
spine/docs/rust-sdk-main/crates/mcp-client/src/: client.rs  lib.rs  service.rs
spine/docs/rust-sdk-main/crates/mcp-client/src/transport/: mod.rs  sse.rs  stdio.rs
spine/docs/rust-sdk-main/crates/mcp-core/: Cargo.toml
spine/docs/rust-sdk-main/crates/mcp-core/src/: content.rs  handler.rs  lib.rs  prompt.rs  protocol.rs  resource.rs  role.rs  tool.rs
spine/docs/rust-sdk-main/crates/mcp-macros/: Cargo.toml
spine/docs/rust-sdk-main/crates/mcp-macros/src/: lib.rs
spine/docs/rust-sdk-main/crates/mcp-server/: Cargo.toml  README.md
spine/docs/rust-sdk-main/crates/mcp-server/src/: errors.rs  lib.rs  router.rs
spine/docs/rust-sdk-main/examples/: README.md
spine/docs/rust-sdk-main/examples/clients/: Cargo.toml
spine/docs/rust-sdk-main/examples/clients/src/: clients.rs  sse.rs  stdio.rs  stdio_integration.rs
spine/docs/rust-sdk-main/examples/macros/: Cargo.toml
spine/docs/rust-sdk-main/examples/macros/src/: calculator.rs
spine/docs/rust-sdk-main/examples/servers/: Cargo.toml
spine/docs/rust-sdk-main/examples/servers/src/: axum.rs  counter_server.rs
spine/docs/rust-sdk-main/examples/servers/src/common/: counter.rs  jsonrpc_frame_codec.rs  mod.rs
spine/scripts/: build-ssr.ps1  cleanup-env.bat  install-powershell.sh  setup-ggml.ps1  setup-llvm.ps1  setup-powershell.ps1  setup-pytorch.ps1  setup-tensorflow.ps1  setup-wasmedge.bat  setup-wasmedge.ps1  setup-wasmedge.sh
